# EzVocab

./: .gitignore  EzVocab.spec  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
.mimocode/plans/: 1782354062046-neon-cabin.md
src/ezvocab/: __init__.py  __main__.py  app.py  embedding.py  llm.py  models.py  scheduler.py  storage.py
tests/: test_app.py  test_embedding.py  test_llm.py  test_scheduler.py  test_storage.py
