[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ezvocab"
version = "0.1.0"
description = "A cross-platform English vocabulary learning app with FSRS scheduling and LLM suggestions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet[all]>=0.28",
    "fsrs>=6.0",
    "google-genai>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ezvocab = "ezvocab.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ezvocab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
